# Ant-plus-driver-win-on-mac-m

./: LICENSE  MIGRATION_PLAN.md  README.md
TacxDrivers/Certificates/: jungo2014.cer  tacx.cer  tacx2012.cer
TacxDrivers/Jungo - kopie/x64/: windrvr1230.cat
TacxDrivers/Jungo/x64/: windrvr1230.inf  windrvr1230.sys
TacxDrivers/Jungo/x86/: windrvr1230.cat  windrvr1230.sys
TacxDrivers/TACX_USB/: Fitness_bike.inf  Fortius.inf  Fortius_Unint.inf  I-magic.inf  I-magic.sys  Imagic_VR_interface.inf  TacxGeneralInterfaceDrivers.cat  VR_interface.inf
TacxDrivers/TACX_USB - kopie/: TacxImagicDriver.cat
bridge_skeleton/: CMakeLists.txt  README.md  TEST_NOTES.md  ant_bridge.def  ant_bridge_stub.c  build_bridge_windows.ps1  build_bridge_windows_nocmake.cmd  build_bridge_windows_nocmake.ps1  deploy_bridge_dll.ps1  restore_original_dll.ps1
bridge_skeleton/build_nocmake/: ant_bridge_stub.exp  ant_bridge_stub.lib
driver_prototype/: COMMANDS_WINDOWS11_ARM64.md  FIX_LIBUSB0_NOT_FOUND.md  INSTALL_WINDOWS11_ARM64.md  NEXT_STEP_BRIDGE_PLAN.md  SIGN_AND_INSTALL_WINDOWS11_ARM64.md  STEP1_STEP2_COMMANDS.md  autosign_and_install.ps1  create_tacx_deviceclass_stub.ps1  diag_output.txt  diagnose_tacx_visibility.ps1  extract_pe_exports.py  fix_libusb_runtime.ps1  generate_bridge_skeleton.py  install_tacxdrivers_bundle.ps1  manage_tacx_driver.ps1  patch_ant_libusb_inf.ps1  tacx_winusb_arm64.inf  tacx_winusb_arm64_compat.inf
tools/: analyze_drivers.py  parse_diag_output.py
